--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "you-stream",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.2.2",
-    "dotenv": "^8.2.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
+    "bootstrap": "^4.6.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^1.0.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-google-login": "^5.1.22",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "http-proxy-middleware": "^2.0.0",
+    "jquery": "^3.6.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "node server/server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
